--- a/codingzone.html
+++ b/codingzone.html
@@ -1,4 +1,3 @@
-
 <!-- SpecialPage CodingZode
 
 
@@ -16,7 +15,7 @@ Contact: 	a-papaspyrou@outlook.com.gr
 
 <!DOCTYPE html>
 <html>
-<title>Papaspyrou | CodingZode</title>
+<title>Papaspyrou | CodingZode | Arduino RaspberyPi Python and many more!</title>
 <link rel="icon" href="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" type="image/png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -107,23 +106,26 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
  </header>
 
 <!-- Add a background color and large text to the whole page -->
-<div class="w3-sand w3-large">
+<div class="w3-large" style="background-color: #b9ccdd">
 
 <!-- Menu Container -->
-<div class="w3-container" id="menu">
-  <div class="w3-content" style="padding:45px 16px">
- 
-<h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">intro</span></h5> <center>
- <h3>Git</h3>
-   <a href="https://alexandroshub.github.io/git" class="w3-button w3-black"> <i class="fa fa-code"></i></a></center>
+<div class="w3-container"  style="background-color: #e8edf5; padding:45px 16px"  id="port">
+<center>
+
+<link href='https://fonts.googleapis.com/css?family=Londrina Shadow' rel='stylesheet'>
+<name style=" font-family:Londrina Shadow; font-size:50px;">GIT</name><br>
+
+<a href="https://alexandroshub.github.io/git" class="w3-button w3-black"> <i class="fa fa-code"></i></a></center>
 
 </div>
 </div>
 <!-- Promo -->
-<div class="w3-container w3-light-grey" style="padding:45px 16px"  id="port">
+<div class="w3-container"  style="background-color: #ccd8ea; padding:45px 16px"  id="port">
   <div class="w3-row-padding"><br>
      <center>
-     <h5 class="w3-center"><span class="w3-tag w3-wide">Programming Languages</span></h5> 
+     <link href='https://fonts.googleapis.com/css?family=Londrina Shadow' rel='stylesheet'>
+<name style=" font-family:Londrina Shadow; font-size:50px;">Programming Languages</name><br>
+
       <div class="w3-third w3-hide-small">
    <h3>Python</h3>
    <a href="https://alexandroshub.github.io/python.html" class="w3-button w3-black"> <i class="fa fa-code"></i></a>
@@ -153,7 +155,7 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
  .'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `.
 -->
 <!-- Promo -->
-<div class="w3-container w3-grey" style="padding:45px 16px"  id="port">
+<div class="w3-container"  style="background-color: #b1c3de; padding:45px 16px"  id="port">
   <div class="w3-row-padding"><br>
      <center>
      <h5 class="w3-center"><span class="w3-tag w3-wide">Hardware Platforms</span></h5> 
@@ -167,13 +169,13 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
       <div class="w3-third">
    <h3>Raspberrypi</h3>
 <div class="w3-row " style="padding-bottom:16px">
-<a href="https://alexandroshub.github.io/raspberrypi" class="w3-button" style="background-color: #d9733b">
+<a href="https://alexandroshub.github.io/raspberrypi" class="w3-button" style="background-color: #4B759B; color: #72c494">
  <i class="fa fa-code"></i>
  </a>
     </div></div>
     <div class="w3-third w3-hide-small">
-   <h3>#</h3>
-   <a href="#" class="w3-button w3-black">  <i class="fa fa-user-o"></i></a>  
+   <h3>soon..</h3>
+   <a href="https://alexandroshub.github.io/soon" class="w3-button w3-black">  <i class="fa fa-code"></i></a>  
 <div class="w3-row " style="padding-bottom:16px">
 
 </div>
@@ -186,10 +188,10 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
 --><!-- //////////// Footer 2020 ////////////  Footer 2020 ////////////  -->
 <style>footer {background-color: #19273C; color: #4B759B; padding: 10px;}</style>
 <footer class="w3-center"><div class="w3-row"><div class="w3-container w3-half">
-<div class="w3-center w3-padding-32"><span class="w3-large w3-bottombar w3-border-orange w3-padding-16">You've reached the end!</span></div>
-<a href="#home" class="w3-button w3-hover-orange"><i class="fa fa-chevron-circle-up w3-margin-right"></i>Επιστροφή στην κορυφή</a></div>
+<div class="w3-center w3-padding-32"><span class="w3-large w3-bottombar w3-border-blue w3-padding-16">You've reached the end!</span></div>
+<a href="#home" class="w3-button w3-hover-blue"><i class="fa fa-chevron-circle-up w3-margin-right"></i>Επιστροφή στην κορυφή</a></div>
 <div class="w3-container w3-half"><div class="w3-center w3-padding-32">
-<span class="w3-large w3-bottombar w3-border-orange w3-padding-16">Thanks For Sharing!</span></div>
+<span class="w3-large w3-bottombar w3-border-blue w3-padding-16">Thanks For Sharing!</span></div>
 <!-- Go to www.addthis.com/dashboard to customize your tools -->
 <div class="addthis_inline_share_toolbox"></div></div></div>
 <!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:340px;" alt="Papaspyrou Alexandros" align="bottom">
@@ -227,6 +229,6 @@ function openMenu(evt, menuName) {
 }
 document.getElementById("myLink").click();
 </script>
-</div>
+
 </body>
 </html>
